--- a/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
+++ b/wkQuiz/ihm-quizz/src/application/vue/EnvoieQuestion.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
@@ -61,11 +61,7 @@
             <Font size="32.0" />
          </font>
       </Label>
-      <TextField fx:id="txtIP" layoutX="484.0" layoutY="290.0" prefHeight="69.0" prefWidth="265.0" style="-fx-background-radius: 15;">
-         <font>
-            <Font size="32.0" />
-         </font>
-      </TextField>
+      <ComboBox fx:id="listeIP" layoutX="485.0" layoutY="303.0" prefHeight="44.0" prefWidth="223.0" promptText="Adresse IP" stylesheets="@css/mainStyle.css" />
       <Button layoutX="264.0" layoutY="458.0" mnemonicParsing="false" onAction="#connexionEtEnvoie" prefHeight="86.0" prefWidth="441.0" style="-fx-background-color: #2F76FF; -fx-background-radius: 60;" text="Se connecter et envoyer" textFill="WHITE">
          <font>
             <Font size="32.0" />
